--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     </div>
     <footer class="fixed-bottom text-white bg-success text-center">
-        Desenvolvido por <a href="https://web.whatsapp.com/send?phone=5548984799374&text=" target="_blank"
+        Desenvolvido por <a href="https://wa.me/+5548984799374&text=" target="_blank"
             class="badge badge-light">Nelson Jucoski</a>
     </footer>
 </body>
@@ -111,8 +111,8 @@
         } else {
 
             fone = fone.value.replace(/\D/g, "");
-            window.open(`https://web.whatsapp.com/send?phone=55${fone}`);
-            //window.open(`https://wa.me/+55${fone}`);
+            //window.open(`https://web.whatsapp.com/send?phone=55${fone}`);
+            window.open(`https://wa.me/+55${fone}`);
             window.parent.location = window.parent.location.href;
         }
 
