--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="description" content="Inicia uma conversa por whatsapp sem precisar colocar número nos contatos">
-    <meta name="keywords" content="WhatsApp, iniciar conversa,  ">
+    <meta name="keywords" content="WhatsApp, iniciar conversa">
     <meta name="author" content="Nelson Cristiano Santos Jucoski">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -16,18 +16,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
+
     <!--  fontes e inones https://fontawesome.com/ -->
     <script src="https://kit.fontawesome.com/22a08da1db.js" crossorigin="anonymous"></script>
     <!--jquery auto complete -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="./style/style.css">
+
     <title>Iniciar conversa WhatsApp</title>
-    <style>
-        footer {
-            height: 3.0em;
-            padding-top: 0.8em;
-        }
-    </style>
+
 </head>
 
 <body>
@@ -78,46 +75,10 @@
 
     </div>
     <footer class="fixed-bottom text-white bg-success text-center">
-        Desenvolvido por <a href="https://wa.me/+5548984799374&text=" target="_blank"
-            class="badge badge-light">Nelson Jucoski</a>
+        Desenvolvido por <a href="https://wa.me/+5548984799374&text=" target="_blank" class="badge badge-light">Nelson
+            Jucoski</a>
     </footer>
+    <script src="./javascript/javacripts.js"></script> <!-- Scripts personalizados-->
 </body>
-
-
-<script>
-    var alerta = document.getElementById('alerta');
-    //exemplo: https://wbruno.com.br/expressao-regular/mascara-campo-de-telefone-em-javascript-com-regex-nono-digito-telefones-sao-paulo/
-    function mtel(v) {
-        v = v.replace(/\D/g, ""); //Remove tudo o que nÃ£o Ã© dÃ­gito
-        v = v.replace(/^(\d{2})(\d)/g, "($1) $2"); //Coloca parÃªnteses em volta dos dois primeiros dÃ­gitos
-        v = v.replace(/(\d)(\d{4})$/, "$1-$2"); //Coloca hÃ­fen entre o quarto e o quinto dÃ­gitos
-        return v;
-    }
-
-    function mask(p) {
-        let fone = p;
-        fone.value = mtel(fone.value);
-        alerta.style.display = "none";
-    }
-
-    function whatsapp() {
-        let fone = document.getElementById('phone');
-
-
-        if (fone.value.length <= 13) {
-            alerta.innerText = "ATENÇÃO: Corrija campo telefone"
-            alerta.style.display = "initial"
-            fone.focus();
-        } else {
-
-            fone = fone.value.replace(/\D/g, "");
-            //window.open(`https://web.whatsapp.com/send?phone=55${fone}`);
-            window.open(`https://wa.me/+55${fone}`);
-            window.parent.location = window.parent.location.href;
-        }
-
-    }
-</script>
-
 
 </html>
