--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>Somente para números do Brasil.</p>
         </div>
 
-        <form action="" method="POST">
+        <div>
             <div class="form-group row">
                 <label class="col-sm-1 col-form-label">Fone:</label>
                 <div class="col-sm-2">
@@ -71,7 +71,7 @@
             <div class="alert alert-danger" role="alert" id="alerta" style="display: none;">
                 Um simples alerta danger. Olha só!
             </div>
-        </form>
+        </div>
 
     </div>
     <footer class="fixed-bottom text-white bg-success text-center">
